--- a/style.css
+++ b/style.css
@@ -51,10 +51,10 @@ svg {
     display: flex;
     display: -webkit-flex;
     position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    top: 10px;
+    bottom: 10px;
+    left: 10px;
+    right: 10px;
     padding: 20px;
     flex-direction: column;
     -webkit-flex-direction: column;
@@ -132,6 +132,9 @@ div#explicacion {
 .content {
     padding-bottom: 0px;
     text-align: center;
+    margin: 0 auto;
+    display: table;
+    height: 100%;
 }
 
 .tip {
@@ -210,13 +213,13 @@ html {
 }
 
 .content-row {
-    display: flex;
-    display: -webkit-flex;
-    flex-grow: 1;
-    -webkit-flex-grow: 1;
-    align-items: center;
-    justify-content: center;
+    display: block;
     overflow: auto;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 39px;
+    bottom: 0;
 }
 
 .top-bar {
@@ -224,6 +227,12 @@ html {
     background: rgb(237, 237, 237);
     padding: 4px;
     border-radius: 5px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 39px;
+    box-sizing: border-box;
 }
 
 #explicacion .content {
@@ -246,4 +255,9 @@ html {
 .button.disabled {
     background: #B0B0B0;
     cursor: default;
+}
+
+.centerhack {
+    display: table-cell;
+    vertical-align: middle;
 }
