--- a/style.css
+++ b/style.css
@@ -51,10 +51,10 @@ svg {
     display: flex;
     display: -webkit-flex;
     position: absolute;
-    top: 10px;
-    bottom: 10px;
-    left: 10px;
-    right: 10px;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
     padding: 20px;
     flex-direction: column;
     -webkit-flex-direction: column;
@@ -223,7 +223,7 @@ html {
 }
 
 .top-bar {
-    display: flex;
+    display: block;
     background: rgb(237, 237, 237);
     padding: 4px;
     border-radius: 5px;
@@ -260,4 +260,15 @@ html {
 .centerhack {
     display: table-cell;
     vertical-align: middle;
+}
+
+body {
+}
+
+html {
+    position: absolute;
+    top: 5px;
+    bottom: 5px;
+    left: 5px;
+    right: 5px;
 }
